# MNISTMiniGrid

./: .gitignore  README.md  pyproject.toml
agent/: __init__.py  eval.py  mnist_classifier.py  policy.py  ppo.py  pretrain_mnist.py  train.py
checkpoints/: mnist_classifier.pt
env/: __init__.py  mnist_data.py
env/envs/: __init__.py  mnist_maze.py
scripts/: record_random_agent.py
tests/: test_mnist_maze.py
