[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["env"]

[project]
name = "env"
version = "0.1.0"
description = "Vectorized MNIST-based GridWorld maze environment for Gymnasium."
requires-python = ">=3.10"
dependencies = [
  "gymnasium>=1.1",
  "matplotlib>=3.7",
  "numpy>=1.23",
  "pillow>=10",
  "torch>=2.1",
]

[project.optional-dependencies]
dev = [
  "pytest",
]
